--- a/app/views/pages/show.html.erb
+++ b/app/views/pages/show.html.erb
@@ -9,7 +9,7 @@ cache cache_name do
 <h2 class="entrytitle"><%= @page_title %></h2>
 <%# format_user_text(@page.body) %>
 <%= @page.body %>
-
+	<div class="clear">&nbsp;</div>
 <% end %>
 
 
