--- a/app/views/home/index.html.erb
+++ b/app/views/home/index.html.erb
@@ -3,3 +3,5 @@
 <%= render :partial=>"/articles/article", :locals=>{:article=>article} %>
 
 <% end %>
+
+<script src="http://connect.facebook.net/en_US/all.js#xfbml=1"></script><fb:like-box href="https://www.facebook.com/pages/Parano/120735897963225" width="540" colorscheme="dark" show_faces="true" stream="true" header="true"></fb:like-box>
