--- a/app/views/layouts/_styles.rhtml
+++ b/app/views/layouts/_styles.rhtml
@@ -1,4 +1,10 @@
+<link href='http://fonts.googleapis.com/css?family=Rock+Salt' rel='stylesheet' type='text/css'>
+<!-- <link href='http://fonts.googleapis.com/css?family=Permanent+Marker' rel='stylesheet' type='text/css'> -->
+<% if  logged_in? %>
+<%= stylesheet_link_merged 'parano_admin' %>
+<%- else -%>
 <%= stylesheet_link_merged CSS_PACKAGE %>
+<%- end -%>
 <!--[if IE]><link rel="stylesheet" type="text/css" media="screen" href="/stylesheets/ie.css" /><![endif]-->
 <!--[if lt IE 7]>
 <script defer type="text/javascript" src="/javascripts/pngfix.js"></script>
